Bug 187747 - Kate filelist coloring wrong when closing a file
Summary: Kate filelist coloring wrong when closing a file
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified All
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-03-20 23:24 UTC by Christian Ehrlicher
Modified: 2010-10-26 13:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian Ehrlicher 2009-03-20 23:24:03 UTC
Version:            (using KDE 4.2.1)
OS:                Linux
Installed from:    SuSE RPMs

When a file is closed, the coloring (shading) is not updated correctly.

- Create 10 new files to get fill the filelist with 'Untitled (0)' .. 'Untitled (10)'
- click on Untitled (5), Untitled (10) and then close Untitled (0)
- now Untitled (6) is colored but not Untitled (5) and Untitled (10) like it should be

I already took a look into kateviewdocumentproxymodel.cpp but could not find the bug which cause this trouble :(
Comment 1 Christian Ehrlicher 2009-03-20 23:24:46 UTC
Forgot to say that this also happens on windows - changed Platform and OS
Comment 2 Christian Ehrlicher 2009-09-03 20:53:10 UTC
SVN commit 1019505 by chehrlic:

fix for bug #187747 - filelist coloring is messed up when a file is closed

BUG: 187747

 M  +12 -0     kateviewdocumentproxymodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1019505
Comment 3 Dominik Haumann 2010-05-08 00:53:37 UTC
The coloring still does not work:
- create 10 new documents (ctrl+n)
- activate Untitled (10), then (9), ... until Untitled.
- click on Untitled (8), (3), (2) and then Untitled
- now Untitled (8) is a significantly other color
- close document (ctrl+w): now the entry with different color is (9)
- close document (ctrl+w): now the entry with different color is (10)

The adaptation does not work correctly. Will reopen.

For reference, the fix for this commit caused crash #213014, which was fixed in this commit for KDE SC 4.5:
http://gitorious.org/kate/kate/commit/f6702b275e3f50f4cbe6dbf8755db36fef5b7319
Comment 4 Dominik Haumann 2010-10-26 13:42:37 UTC
KateViewDocumentProxyModel is replaced by the new file tree plugin. So this should be fixed in KDE version 4.6.