fix for bug #187747 - filelist coloring is messed up when a file is closed

BUG: 187747

svn path=/trunk/KDE/kdesdk/kate/; revision=1019505